# otashoko

./: .gitignore  LICENSE  README.md
client/: .eslintrc.js  README.md  index.html  package.json  postcss.config.js
migrations/2018-07-03-151235_create_tags_table/: up.sql
migrations/2018-07-03-151248_create_book_types_table/: down.sql
migrations/2018-07-03-151257_create_file_types_table/: down.sql  up.sql
migrations/2018-07-03-151651_create_book_tag_maps_table/: down.sql
migrations/2018-10-16-121419_create_folder_table/: up.sql
server/: .editorconfig  .env  .gitignore  Cargo.toml
server/db/: otashoko.db
server/migrations/2018-07-03-151208_create_books_table/: up.sql
server/migrations/2018-07-03-151208_create_medium_table/: down.sql  up.sql
server/migrations/2018-07-03-151235_create_tags_table/: up.sql
server/migrations/2018-07-03-151242_create_files_table/: up.sql
server/migrations/2018-07-03-151248_create_book_types_table/: up.sql
server/migrations/2018-07-03-151248_create_media_types_table/: down.sql  up.sql
server/migrations/2018-07-03-151257_create_file_types_table/: up.sql
server/migrations/2018-07-03-151651_create_book_tag_maps_table/: up.sql
server/migrations/2018-07-03-151651_create_media_tag_maps_table/: down.sql  up.sql
server/migrations/2018-10-16-121419_create_folder_table/: up.sql
server/src/: database.rs  db.rs  dbpool.rs  dbqueries.rs  errors.rs  file_parser.rs  gqlschema.rs  lib.rs  main.rs  models.rs  preview_zip.rs  schema.rs  utils.rs
server/src/migrations/: mod.rs
server/src/migrations/sql/: schema_v1.sql
server/src/models/: book.rs  book_type.rs  file.rs  file_type.rs  tag.rs
src/: dbpool.rs  dbqueries.rs  file_parser.rs  gqlschema.rs  main.rs  models.rs  schema.rs
