[package]
name = "otashoko_server"
version = "0.1.0"
authors = ["OrcaXS Suen <sun16281394@gmail.com>"]

[dependencies]
env_logger = "0.5.13"
lazy_static = "1.1.0"

failure = "0.1.2"
juniper = "0.9.2"
tar = "0.4.16"
unrar = "0.4.3"
zip = "0.4.2"
dotenv = "0.13.0"
serde = "1.0.78"
serde_json = "1.0.27"
serde_derive = "1.0.78"
chrono = { version = "0.4.6", features = ["serde"] }

actix = "0.7.4"
actix-web = "0.7.7"

futures = "0.1.24"
uuid = { version = "0.7.0", features = ["serde", "v5"] }

# r2d2 = "0.8.2"
# r2d2_sqlite = "0.6.0"

[dependencies.diesel]
features = ["sqlite", "r2d2", "chrono"]
version = "1.3.3"

[dependencies.diesel_migrations]
features = ["sqlite"]
version = "1.3.0"

# [dependencies.rusqlite]
# version = "0.14.0"
# features = ["bundled"]
