[package]
name = "otashoko_server"
version = "0.1.0"
authors = ["OrcaXS Suen <iorcaxs@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.7.1"
lazy_static = "1.4.0"
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
juniper = "0.14.1"
http = "0.1.19"
unrar = "0.4.3"
zip = "0.5.3"
dotenv = "0.15.0"
serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "1.0.102"
chrono = { version = "0.4.9", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v1"] }
rusqlite = { version = "0.20.0", features = ["chrono", "serde_json", "url", "uuid"] }
r2d2 = "0.8.6"
r2d2_sqlite = "0.12.0"
barrel = { version = "0.6.2", features = ["sqlite3"] }
tide = "0.2.0"
log = "0.4.8"

[patch.crates-io]
tide = { git = "https://github.com/rustasync/tide", branch = "master" }
http-service = { git = "https://github.com/rustasync/http-service", branch = "master" }
http-service-hyper = { git = "https://github.com/rustasync/http-service", branch = "master" }
http-service-mock = { git = "https://github.com/rustasync/http-service", branch = "master" }
